2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-00
	* collect fixes commited by Chris Y.
	* compliant with FWCore reorganization in 140 series
	* based on evf::StateMachine provided by EventFilter/Utilities
	V00-12-00
	* runtime test shows PluginManager related segfault, to be
	investigated. 
	* for stopping and halting logic to function properly,
	edm::EventProcessor needs some fixes, Emilio is taking care of
	that.
	
	
2007-03-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* add boolean flag epInitialized_ which indicates to the
	initEventProcessor() method if any initalization is
	necessary. Each time the 'parameterSet' parameter is reset via
	XDAQ, the flag will be set to 'false', indicating
	(re-)initialization is necessary.
	* use evf::FsmFailedEvent (EventFilter/Utilities V00-11-11) to
	force the FUEP into 'Failed' state whenever an exception is raised
	in any of the transitional state actions.

2007-02-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* prescale relevant changes by Chris
	* add rcmsStateNotifier from xdaq2rc package to inform run control
	of self-triggered transition into target state

2007-02-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* no tag :(
	* change to asynchronous state model
	* incorporate prescale relevant code from Chris
	* missing from the code is the asynchronous notification of run
	control (function manager) of the arrival in the target
	state. To do this, the xdaq2rc library will be employed, which
	will be available in xdaq 3.8.
	
